<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qwerteach.wivi.qwerteachapp.SignInActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/email_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/grey_edit_text_border"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_sign_in"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edit_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/text_grey"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/grey_edit_text_border"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_outline"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_edit_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/text_grey"
            android:background="@null"/>

    </LinearLayout>

    <Button
        android:id="@+id/email_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:background="@drawable/green_button"
        android:textColor="@color/white"
        android:onClick="didTouchSignInButton"
        android:layout_marginTop="25dp" />

</LinearLayout>
