...
    <string name="title_activity_sign_in">Se connecter</string>
    <string name="facebook_sign_in_button">Se connecter via Facebook</string>
    <string name="google_sign_in_button">Se connecter à l\'aide de Google</string>
    <string name="connection_email_textview">Connexion par e-mail</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="sign_up_button">INSCRIPTION</string>
    <string name="sign_in_button">CONNEXION</string>
    <string name="sign_out_button">DECONNEXION</string>
    <string name="cancel_button">ANNULER</string>
    <string name="sign_up_connection_problem_message">Création du compte inpossible. Réessayez lorsque vous serez connecté !</string>
    <string name="password_confirmation_problem_message">"La confirmation du mot de passe ne correspond pas.</string>
    <string name="title_alert_email_validation">Qwerteach</string>
    <string name="message_alert_email_validation">Adresse électronique incorrecte.</string>
...
